# Copyright 2023 Jesse Windle                                                                                     

# Use of this source code is governed by an MIT-style license that can
# be found in the LICENSE file.


[metadata]
name = ctgauss
version = 0.1
author = Jesse Windle
author_email = jesse@bayesfactor.net
description = Sample from piecwise affine conditioned truncated Gaussian
long_description = file: README.rst
long_description_content_type = text/rst


[options]
python_requires = >=3
package_dir =
    = src
packages =
    ctgauss
install_requires =
    numpy
    scipy

